add_executable(example_share_stack example_share_stack.cpp)
target_link_libraries(example_share_stack coroutine)
add_executable(example_exclusive_stack example_exclusive_stack.cpp)
target_link_libraries(example_exclusive_stack coroutine)

find_library(uring uring)
if (NOT ${uring} STREQUAL "uring-NOTFOUND")
    add_executable(tcp-echo tcp-echo.cpp)
    target_link_libraries(tcp-echo coroutine ${uring})
endif()
